tasks Сортировки + бинпоиск

--- a/conspects/Введение/Основные понятия/Бинарный поиск и два указателя/tasks.html
+++ b/conspects/Введение/Основные понятия/Бинарный поиск и два указателя/tasks.html
@@ -1,23 +1,5 @@
-<p>Вам нужно считать $n$ целых чисел: $a_1, a_2,  \dots , a_n$ ($ 1 \le a_i \le 10^9$).</p>
-<p>Какими типами данных в языке C++ вы можете воспользоваться?</p>
+<p>Загадано число $X$: $-100 \le x \le 100$. На запрос : &quot;? k&quot; вам отвечают $\le$, если число $k \le X$ или $&gt;$, если число $k &gt; X$.&nbsp;</p>
 
+<p>&nbsp;</p>
 
-
-
-<p>Вам нужно считать $n$ целых чисел: $a_1, a_2,  \dots , a_n$ ($ 1 \le a_i \le 10^{15}$).</p>
-<p>Какими типами данных в языке C++ вы можете воспользоваться?</p>
-
-
-
-<p>Сопоставьте выражения и их значения (выражения написаны на языке C++): </p>
-
-* 42 / 13           = 3
-* 42\. / 13         = 3.23
-* 46 / double(14)   = 3.29
-* int(46.) / 11     = 4
-* 42 % 12           = 6
-* double(42 / 13)   = 3.
-
-
-
-<p>Сколько итераций выполнится в цикле while при нахождении $gcd(138, 16)$ </p>
+<p>Какие границы следует указать для бинпоиска в этой задаче, если вы хотите поддерживать инвариант: $l \le X$, $r &gt; X$.</p>
