--- a/conspects/Введение/Основные понятия/Сортировки/conspects.html
+++ b/conspects/Введение/Основные понятия/Сортировки/conspects.html
@@ -11,7 +11,7 @@
 <blockquote>
 <p>Подумайте, какие массивы могут быть отсортированы и по возрастанию и по убыванию</p>
 </blockquote>
-<p><strong>Количество инверсий</strong> &mdash; это количество пар индексов $i$, $j$ таких, что $i &lt; j$ и $a[i] &gt; a[j]$. Такая пара индексов называется <strong>инверсией</strong>.</p>
+<p><strong>Количество инверсий</strong> &mdash; это количество пар индексов $i$, $j$ таких, что $i &lt; j$ и $a[i] &gt; a[j]$ (если мы собираемся отсортировать массив по возрастанию). Такая пара индексов называется <strong>инверсией</strong>. Другое определение: минимальное необходимое количество свапов соседних элементов для того, чтобы отсортировать массив. </p>
 
 
 
